install redux, react-redux, redux-thunk, axios and nose-sass. create redux store. create axios services. create helpers for dealing with api URL. create FipeLayout in layouts. create SearchInput, Loading, Result and Summary components. create helpers for steps. missing tests.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "mobx": "4.8.0",
-    "mobx-react": "^5.4.3",
+    "axios": "^0.19.2",
+    "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,8 +27,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "mobx-remotedev": "^0.3.6"
-  }
+  ]
 }
